--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME=Laravel
+APP_NAME="Indeks KAMI"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=id
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=indeks_kami
+DB_DATABASE=indekskami
 DB_USERNAME=root
 DB_PASSWORD=
 
