--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+RECAPTCHA_SITE_KEY="6Lcqc_UqAAAAAGOv17f_UX5RUA9JUF45JuZshrb9"
+RECAPTCHA_SECRET_KEY="6Lcqc_UqAAAAAAIAPIekrOROORVjBa9zOR6kQAqt"
+
+DEBUGBAR_ENABLED=false
