--- a/.env cpanel
+++ b/.env cpanel
@@ -67,4 +67,4 @@ VITE_APP_NAME="${APP_NAME}"
 RECAPTCHA_SITE_KEY="6Lcqc_UqAAAAAGOv17f_UX5RUA9JUF45JuZshrb9"
 RECAPTCHA_SECRET_KEY="6Lcqc_UqAAAAAAIAPIekrOROORVjBa9zOR6kQAqt"
 
-DEBUGBAR_ENABLED=true
+DEBUGBAR_ENABLED=false
